提高 AuthorityRegister 中catlog的优先级,高于AuthorityCatlogRegister 其他一些小修改